# Calibration-Is-All-You-Need

./: build.sh  dependent.sh  docker_build.sh  docker_install.sh  dockerfile  readme.md
camera_calibration/: CMakeLists.txt
camera_calibration_py/: readme.md
camera_calibration_py/results/: mono_calib.txt  stereo_calib.txt
camera_calibration_py/scripts/: config.py  mono_calibration.py  stereo_calibration.py  take_mono_img.py  take_stereo_bind.py  take_stereo_img.py
imu_calibration/: readme.md
imu_calibration/code_utils/: CMakeLists.txt
imu_calibration/code_utils/src/: mat_io_test.cpp  sumpixel_test.cpp
imu_calibration/imu_utils/: CMakeLists.txt
kalibr/: README.md
kalibr/Schweizer-Messer/numpy_eigen/: CMakeLists.txt
kalibr/Schweizer-Messer/python_module/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_boost/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_common/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_eigen/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_kinematics/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_logging/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_matrix_archive/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_opencv/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_property_tree/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_python/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_random/: CMakeLists.txt
kalibr/Schweizer-Messer/sm_timing/: CMakeLists.txt
kalibr/aslam_cv/aslam_cameras/: CMakeLists.txt
kalibr/aslam_cv/aslam_cameras_april/: CMakeLists.txt
kalibr/aslam_cv/aslam_cv_backend/: CMakeLists.txt
kalibr/aslam_cv/aslam_cv_backend_python/: CMakeLists.txt
kalibr/aslam_cv/aslam_cv_error_terms/: CMakeLists.txt
kalibr/aslam_cv/aslam_cv_python/: CMakeLists.txt
kalibr/aslam_cv/aslam_cv_serialization/: CMakeLists.txt
kalibr/aslam_cv/aslam_imgproc/: CMakeLists.txt
kalibr/catkin_simple/: CMakeLists.txt
kalibr/opencv2_catkin/: CMakeLists.txt
lidar2cam_calibration/: CMakeLists.txt  docker_build.sh  dockerfile  package.xml  readme.md
lidar2cam_calibration/cfg/: filter.cfg  params.yaml
lidar2cam_calibration/data/: data1.txt  data2.txt  data_simple.txt  result.txt
lidar2cam_calibration/data/cloud/: 1676369236523559093.pcd
lidar2cam_calibration/data/marker_img/: docker_env.md
lidar2cam_calibration/include/: ceres_qt.h  create_aruco.h  data_frame_extraction.h  estimation_tf.h  image_procession.h
lidar2cam_calibration/launch/: create_aruco_node.launch  data_frame_extraction_node.launch  estimation_tf_node.launch  record_bag.launch  rqt_reconfig.launch
lidar2cam_calibration/rviz/: 1.rviz
lidar2cam_calibration/src/: create_aruco.cc  create_aruco_node.cc  data_frame_extraction.cpp  data_frame_extraction_node.cpp  estimation_tf.cc  estimation_tf_node.cc  image_procession.cpp  image_procession_node.cc
lidar_align/: CMakeLists.txt  README.md
lidar_align/include/lidar_align/: aligner.h  loader.h  sensors.h
lidar_align/launch/: lidar_align.launch
lidar_align/results/: calibration_lin_pc_6046_6322045734045201048.txt  calibration_lin_pc_87076_5145059391123659721.txt  lidar_points_lin_pc_87076_2979279367693513757.ply
lidar_align/src/: aligner.cpp  eigentf.cpp  loader.cpp
usb_cam/: CMakeLists.txt
(+13 files in other folders)
